--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__logo">
+                <a href="#" >
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
+        </div>
+    </header>
  
     <script src="https://ajax.googleapis.com/ajax/libs/dojo/1.13.0/dojo/dojo.js"></script>
     <script src="js/lips.min.js"></script>
