added main-block section

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -102,6 +102,23 @@
         </div>
 
     </header>
+    <section class="main-block">
+        <div class="container">
+            <div class="main-block__inner">
+                <div class="top-text">
+                    Welcome To Foxtar Market Place!
+                </div>
+                <div class="bottom-text">
+                    Premium WordPress Themes, Web Templates and Many More ...
+                </div>
+
+                <div class="search">
+                    <input type="text" placeholder="Search Your Keywords . . .">
+                    <img src="images/search.png" alt="search">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/dojo/1.13.0/dojo/dojo.js"></script>
     <script src="js/lips.min.js"></script>
