fixed afer lesson

--- a/app/index.html
+++ b/app/index.html
@@ -102,19 +102,23 @@
         </div>
 
     </header>
-    <section class="main-block">
+    <section class="search-block">
         <div class="container">
-            <div class="main-block__inner">
-                <div class="top-text">
+            <div class="search-block__inner">
+                <div class="search-block__inner-title">
                     Welcome To Foxtar Market Place!
                 </div>
-                <div class="bottom-text">
+                <div class="search-block__inner-text">
                     Premium WordPress Themes, Web Templates and Many More ...
                 </div>
 
-                <div class="search">
-                    <input type="text" placeholder="Search Your Keywords . . .">
-                    <img src="images/search.png" alt="search">
+                <div class="search-block__inner-form">
+                    <form>
+                        <input type="text" placeholder="Search Your Keywords . . ." required>
+                        <button type="submit">
+                            <img src="images/search.png" alt="search">
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
