products block ended, bags fixed

--- a/app/index.html
+++ b/app/index.html
@@ -123,10 +123,288 @@
             </div>
         </div>
     </section>
+    <section class="products">
+        <div class="container-fluid">
+            <div class="products__title title">
+                Let’s Check Out Our Newest Release Prodcuts
+            </div>
+            <div class="products__inner">
+                <div class="products__inner-btn">
+                    <button type="button" data-filter="all">All</button>
+                    <button type="button" data-filter=".category-a">WordPress</button>
+                    <button type="button" data-filter=".category-b">Joomla</button>
+                    <button type="button" data-filter=".category-c">Plagins</button>
+                    <button type="button" data-filter=".category-d">Components</button>
+                    <button type="button" data-filter=".category-e">PSD</button>
+                </div>
+                <div class="products__inner-box">
+                    <div class="products__item mix category-a" data-order="1">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-b" data-order="2">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-a" data-order="1">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-f  category-new" data-order="5">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-c category-popular" data-order="3">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-c category-popular" data-order="3">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-a category-new" data-order="1">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-d" data-order="4">
+                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href='#'>
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href='#'>
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                <span> Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-d category-new" data-order="4">
+                            <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                            <div class="products__item-content">
+                                <div class="products__item-name">
+                                    <a class="products__item-title" href='#'>
+                                        Responsive Mobile APP
+                                    </a>
+                                    <a class="products__item-category" href='#'>
+                                        Site Template
+                                    </a>
+                                </div>
+                                <div class="products__item-price">
+                                    $19
+                                </div>
+                            </div>
+                            <div class="products__item-info">
+                                <a class="products__item-author" href="#">
+                                    <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                    <span> Radiustheme</span>
+                                </a>
+                                <div class="products__item-star">
+                                    (05)
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products__item mix category-b category-new" data-order="2">
+                                <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                                <div class="products__item-content">
+                                    <div class="products__item-name">
+                                        <a class="products__item-title" href='#'>
+                                            Responsive Mobile APP
+                                        </a>
+                                        <a class="products__item-category" href='#'>
+                                            Site Template
+                                        </a>
+                                    </div>
+                                    <div class="products__item-price">
+                                        $19
+                                    </div>
+                                </div>
+                                <div class="products__item-info">
+                                    <a class="products__item-author" href="#">
+                                        <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
+                                        <span> Radiustheme</span>
+                                    </a>
+                                    <div class="products__item-star">
+                                        (05)
+                                    </div>
+                                </div>
+                            </div>
+                </div>
+            </div>
+            <div class="products__bottom-btn">
+<button type="button" data-filter=".category-new">
+    All New Items
+</button>
+<button type="button" data-filter=".category-popular">
+Popular Items
+</button>
+            </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/dojo/1.13.0/dojo/dojo.js"></script>
-    <script src="js/lips.min.js"></script>
-    <script src="js/main.min.js"></script>
+        </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
