deleted 2 products_item,fixed width

--- a/app/index.html
+++ b/app/index.html
@@ -139,7 +139,8 @@
                 </div>
                 <div class="products__inner-box">
                     <div class="products__item mix category-a" data-order="1">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -164,7 +165,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-b" data-order="2">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -189,7 +191,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-a" data-order="1">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -214,7 +217,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-f  category-new" data-order="5">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -239,7 +243,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-c category-popular" data-order="3">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -264,7 +269,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-c category-popular" data-order="3">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -289,7 +295,8 @@
                         </div>
                     </div>
                     <div class="products__item mix category-a category-new" data-order="1">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -313,8 +320,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products__item mix category-d" data-order="4">
-                        <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
+                    
+                    <div class="products__item mix category-b category-new" data-order="2">
+                        <a class="products__item-img" href='#'
+                            style="background-image: url(images/content/product-item.jpg);"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
                                 <a class="products__item-title" href='#'>
@@ -338,71 +347,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products__item mix category-d category-new" data-order="4">
-                            <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
-                            <div class="products__item-content">
-                                <div class="products__item-name">
-                                    <a class="products__item-title" href='#'>
-                                        Responsive Mobile APP
-                                    </a>
-                                    <a class="products__item-category" href='#'>
-                                        Site Template
-                                    </a>
-                                </div>
-                                <div class="products__item-price">
-                                    $19
-                                </div>
-                            </div>
-                            <div class="products__item-info">
-                                <a class="products__item-author" href="#">
-                                    <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
-                                    <span> Radiustheme</span>
-                                </a>
-                                <div class="products__item-star">
-                                    (05)
-                                </div>
-                            </div>
-                        </div>
-                        <div class="products__item mix category-b category-new" data-order="2">
-                                <a class="products__item-img" href='#' style="background-image: url(images/content/product-item.jpg);"></a>
-                                <div class="products__item-content">
-                                    <div class="products__item-name">
-                                        <a class="products__item-title" href='#'>
-                                            Responsive Mobile APP
-                                        </a>
-                                        <a class="products__item-category" href='#'>
-                                            Site Template
-                                        </a>
-                                    </div>
-                                    <div class="products__item-price">
-                                        $19
-                                    </div>
-                                </div>
-                                <div class="products__item-info">
-                                    <a class="products__item-author" href="#">
-                                        <div class='avatar' style="background-image: url(images/content/user.jpg)"></div>
-                                        <span> Radiustheme</span>
-                                    </a>
-                                    <div class="products__item-star">
-                                        (05)
-                                    </div>
-                                </div>
-                            </div>
                 </div>
             </div>
             <div class="products__bottom-btn">
-<button type="button" data-filter=".category-new">
-    All New Items
-</button>
-<button type="button" data-filter=".category-popular">
-Popular Items
-</button>
+                <button type="button" data-filter=".category-new">
+                    All New Items
+                </button>
+                <button type="button" data-filter=".category-popular">
+                    Popular Items
+                </button>
             </div>
 
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    
+
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
