--- a/app/index.html
+++ b/app/index.html
@@ -798,7 +798,7 @@
                             <i class="chosse__inner-image iconsvg-1  ">
                                     
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock"
-                                    class="svg-inline--fa fa-lock fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+                                    class="svg-inline--fa fa-lock fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 0 448 512">
                                     <path fill="currentColor"
                                         d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z">
@@ -863,8 +863,7 @@
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-
+    <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
