added author section

--- a/app/index.html
+++ b/app/index.html
@@ -796,7 +796,7 @@
                     <div class="block-box">
                         <div class="chosse__inner-content">
                             <i class="chosse__inner-image iconsvg-1  ">
-                                    
+
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock"
                                     class="svg-inline--fa fa-lock fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 0 448 512">
@@ -805,7 +805,7 @@
                                     </path>
                                 </svg>
                             </i>
-                           
+
                             <div class="chosse__inner-title">
                                 Easily Buy & Sell
                             </div>
@@ -860,6 +860,19 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section class="author">
+        <div class="container-fluid" style="background-image: url(images/author-bg.jpg)">
+            <div class="author-box">
+                <div class="author-box__inner">
+                    <div class="author-box__inner-title">
+                        Over <span>20,000</span> Author
+                        Are Involved Here!
+                    </div> 
+                    <a class="author-box__inner-btn" href="#">Become A Author</a>
+                </div>
+            </div>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
